# ngalir

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  lefthook.yml
.github/workflows/: ci.yml
crates/af-contract/: Cargo.toml
crates/af-contract/src/: lib.rs
crates/af-db/: Cargo.toml
crates/af-db/src/: main.rs
crates/af-echo/: Cargo.toml
crates/af-echo/src/: main.rs
crates/af-file/: Cargo.toml
crates/af-file/src/: main.rs
crates/af-http/: Cargo.toml
crates/af-http/src/: main.rs
crates/af-jq/: Cargo.toml
crates/af-jq/src/: main.rs
crates/af-orchestrator/: Cargo.toml
crates/af-orchestrator/src/: main.rs
crates/af-orchestrator/tests/: flow_integration.rs
crates/af-vault/: Cargo.toml
crates/af-vault/src/: main.rs
crates/axis-contract/: Cargo.toml
crates/axis-contract/src/: lib.rs
crates/axisflow-contract/: Cargo.toml
crates/kc-contract/: Cargo.toml
crates/kc-contract/src/: lib.rs
crates/kc-db/: Cargo.toml
crates/kc-db/src/: main.rs
crates/kc-echo/: Cargo.toml
crates/kc-echo/src/: main.rs
crates/kc-file/: Cargo.toml
crates/kc-file/src/: main.rs
crates/kc-http/: Cargo.toml
crates/kc-http/src/: main.rs
crates/kc-jq/: Cargo.toml
crates/kc-jq/src/: main.rs
crates/kc-orchestrator/: Cargo.toml
crates/kc-orchestrator/src/: main.rs
crates/kc-orchestrator/tests/: flow_integration.rs
crates/kc-vault/: Cargo.toml
crates/kc-vault/src/: main.rs
crates/na-airtable/: Cargo.toml
crates/na-airtable/src/: main.rs
crates/na-contract/: Cargo.toml
crates/na-contract/src/: lib.rs
crates/na-csv/: Cargo.toml
crates/na-csv/src/: main.rs
crates/na-db/: Cargo.toml
crates/na-db-mysql/: Cargo.toml
crates/na-db-mysql/src/: main.rs
crates/na-db-postgres/: Cargo.toml
crates/na-db-postgres/src/: main.rs
crates/na-db-sqlite/: Cargo.toml
crates/na-db-sqlite/src/: main.rs
crates/na-db/src/: main.rs
crates/na-discord/: Cargo.toml
crates/na-discord/src/: main.rs
crates/na-echo/: Cargo.toml
crates/na-echo/src/: main.rs
crates/na-email/: Cargo.toml
crates/na-email/src/: main.rs
crates/na-excel/: Cargo.toml
crates/na-excel/src/: main.rs
crates/na-file/: Cargo.toml
crates/na-file/src/: main.rs
crates/na-fixedwidth/: Cargo.toml
crates/na-fixedwidth/src/: main.rs
crates/na-google-sheets/: Cargo.toml
crates/na-google-sheets/src/: main.rs
crates/na-html/: Cargo.toml
crates/na-html/src/: main.rs
crates/na-http/: Cargo.toml
crates/na-http/src/: main.rs
crates/na-jq/: Cargo.toml
crates/na-jq/src/: main.rs
crates/na-json/: Cargo.toml
crates/na-json/src/: main.rs
crates/na-jsonpath/: Cargo.toml
crates/na-jsonpath/src/: main.rs
crates/na-llm/: Cargo.toml
crates/na-llm/src/: main.rs
crates/na-notion/: Cargo.toml
crates/na-notion/src/: main.rs
crates/na-orchestrator/: Cargo.toml
crates/na-orchestrator/src/: api.rs  cli.rs  error.rs  executor.rs  flow.rs  history.rs  init_node.rs  main.rs  oauth.rs  registry.rs  state.rs  vault.rs  ws.rs
crates/na-orchestrator/tests/: flow_integration.rs  node_integration.rs  server_smoke.rs
crates/na-parquet/: Cargo.toml
crates/na-parquet/src/: main.rs
crates/na-s3/: Cargo.toml
crates/na-s3/src/: main.rs
crates/na-schedule/: Cargo.toml
crates/na-schedule/src/: main.rs
crates/na-slack/: Cargo.toml
crates/na-slack/src/: main.rs
crates/na-stripe/: Cargo.toml
crates/na-stripe/src/: main.rs
crates/na-telegram/: Cargo.toml
crates/na-telegram/src/: main.rs
crates/na-twilio/: Cargo.toml
crates/na-twilio/src/: main.rs
crates/na-vault/: Cargo.toml
crates/na-vault/src/: main.rs
crates/na-webhook/: Cargo.toml
crates/na-webhook/src/: main.rs
crates/na-xml/: Cargo.toml
crates/na-xml/src/: main.rs
crates/na-yaml/: Cargo.toml
crates/na-yaml/src/: main.rs
crates/na-zip/: Cargo.toml
crates/na-zip/src/: main.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: main.rs
docs/: ARCHITECTURE.md  NODES.md  ROADMAP.md  flow-spec.md  node-contract.md  registry.json
docs/nodes/: na-airtable.md  na-csv.md  na-db-mysql.md  na-db-postgres.md  na-db-sqlite.md  na-db.md  na-discord.md  na-echo.md  na-email.md  na-excel.md  na-file.md  na-fixedwidth.md  na-google-sheets.md  na-html.md  na-http.md  na-jq.md  na-json.md  na-jsonpath.md  na-llm.md  na-notion.md  na-parquet.md  na-s3.md  na-schedule.md  na-slack.md  na-stripe.md  na-telegram.md  na-twilio.md  na-vault.md  na-webhook.md  na-xml.md  na-yaml.md  na-zip.md
examples/: README.md  api-demo.yaml  echo-demo.yaml  echo-vault.yaml  file-demo.yaml  jq-demo.yaml  jsonpath-demo.yaml  vault.json  when-demo.yaml
scripts/: check-nodes-docs.sh  generate-node-docs.sh  generate-registry.sh  install.sh
ui/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/src/: App.svelte  App.tsx  main.tsx
ui/src/components/: CredentialsPage.tsx  FlowCanvas.tsx  HistoryPage.tsx  NodeBlock.tsx  NodePalette.tsx  NoteBlock.tsx  PropertyPanel.tsx  Toolbar.tsx
ui/src/lib/: CredentialsPage.svelte  FlowCanvas.svelte  HistoryPage.svelte  NodeBlock.svelte  NodePalette.svelte  NoteBlock.svelte  PropertyPanel.svelte  Toast.svelte  Toolbar.svelte  store.svelte.ts  store.ts  types.ts  useStore.ts
website/: index.md  package-lock.json  package.json
website/.vitepress/: config.ts
website/docs/: architecture.md  flow-spec.md  node-contract.md  roadmap.md
website/guide/: cli.md  install.md  writing-flows.md
website/nodes/: index.md
