[workspace]
resolver = "2"
members = [
    "crates/na-contract",
    "crates/na-db-postgres",
    "crates/na-db-mysql",
    "crates/na-db-sqlite",
    "crates/na-echo",
    "crates/na-file",
    "crates/na-http",
    "crates/na-jsonpath",
    "crates/na-orchestrator",
    "crates/na-vault",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
 
