[workspace]
resolver = "2"
members = [
    "crates/na-contract",
    "crates/na-db-postgres",
    "crates/na-db-mysql",
    "crates/na-db-sqlite",
    "crates/na-echo",
    "crates/na-file",
    "crates/na-http",
    "crates/na-jsonpath",
    "crates/na-orchestrator",
    "crates/na-vault",
    "crates/na-webhook",
    "crates/na-schedule",
    "crates/na-email",
    "crates/na-csv",
    "crates/na-excel",
    "crates/na-google-sheets",
    "crates/na-llm",
    "crates/na-xml",
    "crates/na-yaml",
    "crates/na-parquet",
    "crates/na-fixedwidth",
    "crates/na-html",
    "crates/na-json",
    "crates/na-zip",
    "crates/na-slack",
    "crates/na-telegram",
    "crates/na-discord",
    "crates/na-notion",
    "crates/na-stripe",
    "crates/na-s3",
    "crates/na-airtable",
    "crates/na-twilio",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
 
