[package]
name = "af-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AxisFlow Orchestrator: validates and executes a Flow Spec DAG of `af-*` nodes."

[[bin]]
name = "axisflow"
path = "src/main.rs"

[dependencies]
af-contract = { path = "../af-contract" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
