[package]
name = "af-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AxisFlow Orchestrator: validates and executes a Flow Spec DAG of `af-*` nodes."

[[bin]]
name = "axisflow"
path = "src/main.rs"

[dependencies]
af-contract = { path = "../af-contract" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
jsonschema = "0.46.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }

[dev-dependencies]
af-echo = { path = "../af-echo" }
tempfile = "3.27.0"
