[package]
name = "kc-db"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kucur node: execute SQL queries (PostgreSQL)."

[dependencies]
kc-contract = { path = "../kc-contract" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls"] }
