[package]
name = "kc-http"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kucur node: HTTP client (GET/POST/PUT/DELETE)."

[dependencies]
kc-contract = { path = "../kc-contract" }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
