[package]
name = "kc-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Kucur Orchestrator: validates and executes a Flow Spec DAG of `kc-*` nodes."

[[bin]]
name = "kucur"
path = "src/main.rs"

[dependencies]
kc-contract = { path = "../kc-contract" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
jsonschema = "0.46.10"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
clap = { version = "4.6.1", features = ["derive"] }

[dev-dependencies]
kc-echo = { path = "../kc-echo" }
tempfile = "3.27.0"
