[package]
name = "na-csv"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ngalir node: read and write CSV files with full options."

[[bin]]
name = "na-csv"
path = "src/main.rs"

[dependencies]
na-contract = { path = "../na-contract" }
serde_json = "1"
csv = "1.3"
anyhow = "1"
tracing = "0.1.44"
