[package]
name = "na-db-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ngalir node: execute SQL queries (SQLite)."

[dependencies]
na-contract = { path = "../na-contract" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
