[package]
name = "na-discord"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Discord messaging node: send messages via webhook or bot."

[dependencies]
na-contract = { path = "../na-contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
wiremock = "0.6"
