[package]
name = "na-excel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ngalir node: read and write Excel (.xlsx) files."

[[bin]]
name = "na-excel"
path = "src/main.rs"

[dependencies]
na-contract = { path = "../na-contract" }
serde_json = "1"
calamine = "0.36"
rust_xlsxwriter = "0.96"
anyhow = "1"
tracing = "0.1.44"
