[package]
name = "na-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ngalir Orchestrator: validates and executes a Flow Spec DAG of `na-*` nodes."

[[bin]]
name = "ngalir"
path = "src/main.rs"

[dependencies]
na-contract = { path = "../na-contract" }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
jsonschema = "0.46.10"
rhai = { version = "1", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4"
prometheus = { version = "0.14", features = ["process"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
tempfile = "3.27.0"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
flate2 = "1"
tar = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
