[package]
name = "na-schedule"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ngalir trigger node: executes a flow on a cron schedule."

[[bin]]
name = "na-schedule"
path = "src/main.rs"

[dependencies]
na-contract = { path = "../na-contract" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
cron = "0.15"
chrono = "0.4"
axum = "0.8"
prometheus = { version = "0.14", features = ["process"] }
