[package]
name = "na-webhook"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ngalir trigger node: starts an HTTP server that executes a flow on each POST request."

[[bin]]
name = "na-webhook"
path = "src/main.rs"

[dependencies]
na-contract = { path = "../na-contract" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json"] }
axum = "0.8"
prometheus = { version = "0.14", features = ["process"] }
